# sloppenhimer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
config/prompts/: simplify_story.txt
data/audio/: 1pwchxe.json  1pwchxe.srt  1pwi5ma.json  1pwi5ma.srt  1pwpv12.json  1pwpv12.srt  1px0gnf.json  1px0gnf.srt  1px8rcr.json  1px8rcr.srt  1px90p2.json  1px90p2.srt  1pxqg5q.json  1pxqg5q.srt
data/stories/: 1pvttoi.json  1pvv1o8.json  1pw2f4e.json  1pw605j.json  1pwchxe.json  1pwi5ma.json  1pwpv12.json  1pwq5mt.json  1pwxfbe.json  1px0gnf.json  1px1w0j.json  1px5tsv.json  1px7o77.json  1px8rcr.json  1px90p2.json  1pxhobs.json  1pxiuha.json  1pxj074.json  1pxqg5q.json  1pxrs1l.json  1pxs6zy.json  1pxtuyy.json  1pxv72w.json  1py3t03.json  1py4ac0.json  1py87fp.json  1py9d7r.json  1pya0gx.json  1pydvjk.json  1pyfsgm.json  1pyrcbh.json  1pyrwu9.json  1pysitp.json  1pz24y3.json  1pz3rgi.json  1pz7xnt.json  1pzbodk.json  1pzch5l.json  1pzdneo.json  1pzedq9.json  (+31 more)
src/: __init__.py
src/cli/: __init__.py  main.py
src/models/: __init__.py  caption.py  story.py  video.py
src/processors/: __init__.py  llm.py  transcription.py  tts.py
src/scrapers/: __init__.py  reddit.py  youtube.py
src/utils/: __init__.py  paths.py  retry.py
src/video/: __init__.py  assembler.py  captions.py  editor.py  html_thumbnail.py
